fixed phone pic cropping

--- a/blog_home.css
+++ b/blog_home.css
@@ -14,6 +14,7 @@
 	padding-bottom: 15px;
 }
 
+
 header {
 	margin-top: 20px;
 	position: relative;
@@ -62,7 +63,7 @@ li {
 	padding-top: 20px;
 	width: 1000px;
 	height: 250px;
-	object-fit: fill;
+	object-fit: cover;
 }
 
 div .atm {
